# eflips-kyoto

./: .gitignore  README.md  config.toml  main.py  pyproject.toml
input/: README.md
scripts/: plot.py  prepare.py  scheduling.py  util.py
