[project]
name = "eflips-kyoto"
version = "0.1.0"
description = "Applying eFLIPS to a Kyoto dataset"
authors = [
    {name = "Ludger Heide",email = "ludger.heide@tu-berlin.de"}
]
license = {text = "AGPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "eflips-depot (>=4.4.3,<5.0.0)",
    "eflips-opt (>=0.1.5,<1.0.0)",
    "eflips-model (>=6.0.2,<7.0.0)",
    "eflips-eval (>=1.5.6,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

